Large refactor cuz why not?